--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   },
   "devDependencies": {
     "@semantic-release/github": "^8.0.5"
+  },
+  "dependencies": {
+    "@semantic-release/exec": "^6.0.3"
   }
 }
