--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
         with:
           node-version: 16
 
+      - name: Install
+        run: npm install
       - name: Release
         run: npx semantic-release
         env:
