--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,10 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install
-        run: npm install
+      - name: Install dependencies
+        run: npm ci
       - name: Release
-        run: npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npx semantic-release
+
